--- a/Deposito/src/app/pages/filtros/fil-persona/fil-persona.component.html
+++ b/Deposito/src/app/pages/filtros/fil-persona/fil-persona.component.html
@@ -1,17 +1,17 @@
-<a class="label label-primary" data-toggle="collapse" href="#callapseGrupoFil" personae="button" aria-expanded="false"
-    aria-contpersonas="callapseGrupoFil">
+<div *ngIf="procesando">
+    <app-spinner></app-spinner>
+</div>
+<a class="label label-primary" data-toggle="collapse" href="#callapseGrupoFil" role="button" aria-expanded="false"
+    aria-controls="callapseGrupoFil">
     Filtrar
 </a>
 <div class="row" id="callapseGrupoFil">
-
     <div class="col-md-2">
-        <select (change)="list()" class="form-contpersona" name="limit" id="limit" [(ngModel)]="limit">
+        <select (change)="list()" class="form-control" name="limit" id="limit" [(ngModel)]="limit">
             <option *ngFor="let c of limits" [ngValue]="c">{{c}}</option>
         </select>
-
     </div>
     <div class="col-md-5">
-
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 <li [class]="(prevPage<=0)?'page-item disabled':'page-item'">
@@ -19,7 +19,7 @@
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
-                <li class="page-item ">
+                <li class="page-item">
                     <a class="page-link" href="javascript:void(0);">
                         Pagina {{page}} de {{lastPage}} total {{count}} registro
                     </a>
@@ -33,11 +33,11 @@
             </ul>
         </nav>
     </div>
-    <div class="col-md-5 ">
+    <div class="col-md-5">
         <form ngNativeValidate #f="ngForm">
             <div id="custom-search-input">
                 <div class="input-group col-md-12 mb-2">
-                    <input name="filtro" [(ngModel)]="search" type="text" class="search-query form-contpersona"
+                    <input name="filtro" [(ngModel)]="search" type="text" class="search-query form-control"
                         placeholder="Buscar" />
                     <span class="input-group-btn">
                         <button class="btn btn-danger" (click)="list()" type="submit">
